--- a/src/app/components/today-component/today.component.html
+++ b/src/app/components/today-component/today.component.html
@@ -3,15 +3,15 @@
   <div class="columns today--section__box">
       <div class="column btc--section">
           <h5>{{priceMulti && priceMulti.BTC.USD}}</h5>
-          <p>1 BTC</p>
+          <p>1 Bitcoin</p>
       </div>
       <div class="column eth--section">
           <h5>{{priceMulti && priceMulti.ETH.USD}}</h5>
-          <p>1 ETH</p>
+          <p>1 Ethereum</p>
       </div>
       <div class="column ltc--section">
           <h5>{{priceMulti && priceMulti.LTC.USD}}</h5>
-          <p>1 LTC</p>
+          <p>1 Litecoin</p>
       </div>
   </div>
 </div>
